# mandlebrot-explorer

./: .gitignore  CMakeLists.txt  README.md  run.bat
include/: Screen.hpp  Shader.hpp  Window.hpp  constants.hpp
res/shaders/: Mandlebrot.fs  Mandlebrot.vs  Xor.fs
src/: Screen.cpp  Shader.cpp  Window.cpp  main.cpp
